--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "axios": "^1.7.9",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-flags-select": "^2.2.3"
+    "react-country-flag": "^3.1.0",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
